[package]
name = "cli"
version = "0.1.0"
authors = ["Aaron Schlesinger <aaron@ecomaz.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
futures = "0.3.7"
reqwest = {version = "0.10.8", features = ["json", "blocking"]}
structopt = "0.3.20"
tokio = { version = "0.2.22", features = ["macros"] }
